# my_research

./: README.md
c++/alg/alg/sort/: sort.hpp
c++/alg/test/code/: CMakeLists.txt
c++/alg/test/code/src/: test.cpp
c++/odb/odb_demo/Code/: CMakelists.txt
c++/odb/odb_demo/Code/Include/odb/Debug/: vc120.idb
c++/odb/odb_demo/Code/Include/odb/Debug/libodb-vc12.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  libodb-vc12.lastbuildstate  libodb-vc12.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
c++/odb/odb_demo/Code/Source/: CMakelists.txt
c++/odb/odb_demo/Code/Source/DBTest/: CMakelists.txt  Test.cpp  construct_database.bat  gen-odb-class.bat
c++/odb/odb_demo/Code/Source/Test/: CMakelists.txt
c++/odb/odb_demo/Output/Debug/: DBTestd.ilk
c++/streaming/ffmpeg_sdl/streaming_rpc_thrit/: readme.txt  streaming_rpc.thrift  thrift_gen.bat
c++/streaming/ffmpeg_sdl/streaming_rpc_thrit/Demo/bin_d/win-x86/: ThriftServerDemod.ilk
c++/streaming/ffmpeg_sdl/streaming_rpc_thrit/Demo/code/: CMakeLists.txt
c++/streaming/ffmpeg_sdl/streaming_rpc_thrit/Demo/code/include/streaming/: StreamExport.h
c++/streaming/ffmpeg_sdl/streaming_rpc_thrit/Demo/code/include/thrift-linux/thrift/: config.h
c++/streaming/ffmpeg_sdl/streaming_rpc_thrit/Demo/code/src/Streaming/: CMakeLists.txt  CachedStream.cpp  CachedStream.h  GdiDisplay.cpp  GdiDisplay.h  GdiPlusDisplay.cpp  GdiPlusDisplay.h  HDRealStream.cpp  HDRealStream.h  ImageConvert.cpp  ImageConvert.h  SDLDisplay.cpp  SDLDisplay.h  SimpliedDecode.cpp  SimpliedDecode.h  SimpliedDecodeClass.cpp  SimpliedDecodeClass.h  SimpliedDecodePriDef.h  SimpliedStreamClass.cpp  SimpliedStreamClass.h  StreamExport.cpp  UsedDef.h  WebSocketClient.cpp  WebSocketClient.hpp
c++/streaming/ffmpeg_sdl/streaming_rpc_thrit/Demo/code/src/Streaming/rtmp/: getopt.c  librtmp_send264.cpp  simplest_librtmp_send264.cpp
c++/streaming/ffmpeg_sdl/streaming_rpc_thrit/Demo/code/src/ThriftServerDemo/: CMakeLists.txt  StreamingRPCService_server.skeleton.cpp  streaming_rpc_constants.h
c++/streaming/ffmpeg_sdl/streaming_rpc_thrit/Demo/lib_d/win-x86/: Streamingd.exp  Streamingd.lib  encode.lib  libboost_chrono-vc100-mt-gd-1_61.lib  libboost_chrono-vc100-mt-gd-1_63.lib  libboost_date_time-vc100-mt-gd-1_61.lib  libboost_date_time-vc100-mt-gd-1_63.lib  libboost_random-vc100-mt-gd-1_63.lib  libboost_system-vc100-mt-gd-1_61.lib  libboost_system-vc100-mt-gd-1_63.lib  libboost_thread-vc100-mt-gd-1_61.lib  libboost_thread-vc100-mt-gd-1_63.lib
c++/streaming/ffmpeg_sdl/streaming_rpc_thrit/gen-cpp/: StreamingRPCService.cpp  StreamingRPCService.h  StreamingRPCService_server.skeleton.cpp  streaming_rpc_constants.cpp  streaming_rpc_types.cpp  streaming_rpc_types.h
trash/: my_resarch_public  my_research_private.ppk
